--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 CppBase/CppBase/x64/Debug/
 CppBase/x64/Debug/CppBase.exe
 CppBase/x64/Debug/
+CppBase/.vs/CppBase/v17/ipch/AutoPCH/29f8f616d5eedce7/CPPBASE.ipch
+CppBase/.vs/CppBase/FileContentIndex/
