--- a/CppBase/CppBase/CppBase.vcxproj
+++ b/CppBase/CppBase/CppBase.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="byreference.cpp" />
+    <ClCompile Include="car.cpp" />
     <ClCompile Include="CppBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="byreference.h" />
+    <ClInclude Include="car.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
